--- a/app/sass/common/_typography.sass
+++ b/app/sass/common/_typography.sass
@@ -30,3 +30,17 @@
 /* ==========================================================================
 	 Font sizes
 	 ========================================================================== */
+.text-xxl
+	+font-size(xxl)
+.text-xl
+	+font-size(xl)
+.text-lg
+	+font-size(lg)
+.text-md
+	+font-size(md)
+.text-sm
+	+font-size(sm)
+.text-xs
+	+font-size(xs)
+.text-xxs
+	+font-size(xxs)
