--- a/app/sass/components/_breadcrumbs.sass
+++ b/app/sass/components/_breadcrumbs.sass
@@ -10,7 +10,7 @@
 		> li
 			display: inline-flex
 			align-items: center
-			color: #000
+			color: $text-200
 			&:not(:last-child)::after
 				content: '/'
 				display: inline-block
@@ -18,7 +18,7 @@
 				margin: 0 16px
 				+font-size(xxs)
 			> a
-				color: #000
+				color: $text-200
 				&:hover
 					color: blue
 			> a,
