--- a/app/sass/components/_forms.sass
+++ b/app/sass/components/_forms.sass
@@ -24,7 +24,7 @@ input, textarea
 	// &:focus:required:invalid
 	// 	border-color: red
 	// &:required:valid
-	// 	border-color: #000
+	// 	border-color: $text-200
 
 label
 	cursor: pointer
@@ -37,11 +37,11 @@ label
 		appearance: none
 		display: block
 		width: 100%
-		border-radius: 4px
+		border-radius: 0
 		border: 1px solid $border
 		background-color: $white
 		background-clip: padding-box
-		color: #000
+		color: $text-200
 		font-size: 15px
 		font-weight: $w-regular
 		line-height: 1.5
@@ -87,7 +87,7 @@ label
 			width: 100%
 			margin-bottom: 0
 			padding-left: 32px
-			color: #000
+			color: $text-200
 			font-size: 15px
 			line-height: 20px
 			&::before,
@@ -105,12 +105,12 @@ label
 				transition: border .3s ease, opacity .15s ease
 			&::after
 				border-color: $border
-				background: #000 url('../images/icons/checked-white.svg') no-repeat center/10px
+				background: $text-200 url('../images/icons/checked-white.svg') no-repeat center/10px
 				opacity: 0
 			&:hover
 				&::before,
 				&::after
-					border-color: #000
+					border-color: $text-200
 		input:checked + label::after
 			opacity: 1
 
@@ -134,7 +134,7 @@ label
 			margin-bottom: 0
 			padding-left: 32px
 			padding-right: 20px
-			color: #000
+			color: $text-200
 			font-size: 15px
 			line-height: 20px
 			> .hint
@@ -168,26 +168,26 @@ label
 			&:hover
 				&::before,
 				&::after
-					border-color: #000
+					border-color: $text-200
 		input:checked + label
 			&::before
 				border-color: $trsp
-				background-color: #000
+				background-color: $text-200
 			&::after
 				opacity: 1
 		&-descr
 			flex: 0 0 100%
 			padding-top: 2px
 			padding-left: 32px
-			color: #000
+			color: $text-200
 			+font-size(xxs)
 
 	// Select
 	&-select
-		color: #000
+		color: $text-200
 		background: $white url('../images/icons/dropdown-arrow.svg') no-repeat right 8px center / 26px
 		&:focus
-			color: #000
+			color: $text-200
 			box-shadow: 0 0 0 2px #7BE693
 
 	// Form group
@@ -203,7 +203,7 @@ label
 				min-height: auto
 				padding-top: 0
 				padding-left: 25px
-				color: #000
+				color: $text-200
 				+font-size(xxs)
 				&::before,
 				&::after
@@ -237,7 +237,7 @@ label
 			width: 100%
 			margin-bottom: 0
 			border: 1px solid $trsp
-			color: #000
+			color: $text-200
 			font-size: 15px
 			line-height: 1.5
 			transition: all .1s ease-in-out
