--- a/app/sass/common/_base.sass
+++ b/app/sass/common/_base.sass
@@ -1,7 +1,7 @@
 @import '../helpers/helpers'
 
 ::selection
-	background-color: #000
+	background-color: $text-200
 	color: $white
 
 // html, body
@@ -11,10 +11,9 @@ body
 	overflow-x: hidden
 	position: relative
 	min-width: 320px
-	color: #000
+	color: $text-200
 	font-family: $userfont
-	font-size: 15px
-	line-height: 24px
+	+font-size(sm)
 	&.lock-scroll
 		overflow: hidden
 		height: 100%
@@ -32,10 +31,10 @@ ul
 
 a
 	position: relative
-	color: #000
+	color: $text-200
 	transition: $trs
 	&:hover
-		color: blue
+		color: $orange
 		text-decoration: none
 
 img
@@ -101,7 +100,7 @@ hr
 		margin-left: -16px
 		margin-top: -16px
 		box-sizing: border-box
-		border: 3px solid #000
+		border: 3px solid $text-200
 		border-radius: 50%
 		border-top-color: $trsp
 		transform-origin: 50%
