--- a/app/sass/components/_buttons.sass
+++ b/app/sass/components/_buttons.sass
@@ -8,13 +8,13 @@
 	height: 48px
 	padding-left: 40px
 	padding-right: 40px
-	border-radius: 4px
-	border: 1px solid $trsp
+	border-radius: 0
+	border: 0
 	background-color: $trsp
-	color: #000
+	color: $text-200
 	font-family: inherit
 	font-size: 15px
-	font-weight: 500
+	font-weight: $w-regular
 	line-height: 1
 	text-align: center
 	white-space: nowrap
@@ -23,8 +23,43 @@
 	transition: $trs
 	&:hover
 		color: inherit
-	&:focus
-		box-shadow: 0 0 0 4px rgba(#000, 0.25)
 	&:disabled
 		background-color: #999
-		color: #000
+		color: $text-200
+
+
+/* ==========================================================================
+	Go up button
+	========================================================================== */
+.go-up
+	pointer-events: none
+	position: fixed
+	bottom: 20px
+	right: -20px
+	width: 40px
+	z-index: 199
+	visibility: hidden
+	opacity: 0
+	transform-origin: bottom left
+	transform: rotate(-90deg) translateY(12px)
+	transition: $trs
+	&._is-shown
+		pointer-events: auto
+		visibility: visible
+		opacity: 1
+		transform: rotate(-90deg) translateY(0)
+	&-btn
+		height: 40px
+		padding: 12px
+		box-shadow: $box-shadow
+		background-color: $white
+		color: $orange
+		font-size: 14px
+		&:hover
+			box-shadow: none
+			background-color: $bg
+			color: $orange
+		.icon
+			width: 12px
+			height: 12px
+			margin-left: 4px
