--- a/app/sass/helpers/_variables.sass
+++ b/app/sass/helpers/_variables.sass
@@ -1,12 +1,18 @@
+$orange:     #F66527
+$text-500:   #FDF8F5
+$text-400:   #B0B4BB
+$text-300:   #6F7278
+$text-200:   #2A2B2E
 $white:      #FFF
-$border:     #F0F0F0
-$background: #F8FAFF
-$box-shadow: 0px 9px 27px rgba(176, 190, 197, 0.82), 0px 3px 6px rgba(176, 190, 197, 0.32)
-$trsp:       transparent
-$userfont:   'Roboto', sans-serif
-$systemfont: -apple-system, BlinkMacSystemFont, Arial, sans-serif
-$lineheight: 1.5
-$trs:        .3s ease
+$border:     #EDF0F3
+$bg:         #FFF0EA
+$box-shadow:   0px 9px 26px rgba(176, 190, 197, 0.82), 0px 3px 6px rgba(176, 190, 197, 0.32)
+$box-shadow-2: 0px 9px 90px rgba(176, 190, 197, 0.22), 0px 3px 6px rgba(176, 190, 197, 0.32)
+$trsp:         transparent
+$userfont:     'Manrope', sans-serif
+$systemfont:   -apple-system, BlinkMacSystemFont, Arial, sans-serif
+$lineheight:   1.5
+$trs:          .3s ease
 
 // Font weights
 $w-regular: 400
