--- a/app/sass/helpers/_mixins.sass
+++ b/app/sass/helpers/_mixins.sass
@@ -42,8 +42,10 @@
 	@else if $size == 'xs'
 		font-size: 13px
 		line-height: 16px
+		letter-spacing: 0.02em
 
 	@else if $size == 'xxs'
 		font-size: 11px
 		line-height: 16px
+		letter-spacing: 0.1em
 
