--- a/app/sass/common/_spacers.sass
+++ b/app/sass/common/_spacers.sass
@@ -5,6 +5,14 @@
 	margin-top: 80px
 .mb-80
 	margin-bottom: 80px
+.mt-40
+	margin-top: 40px
+.mb-40
+	margin-bottom: 40px
+.mt-32
+	margin-top: 32px
+.mb-32
+	margin-bottom: 32px
 
 
 /* ==========================================================================
