--- a/app/sass/components/_cards.sass
+++ b/app/sass/components/_cards.sass
@@ -6,6 +6,8 @@
 	display: block
 	min-width: 0
 	height: 100%
+	&-photo
+		user-select: none
 	&-meta
 		margin-top: 16px
 		.country
@@ -15,11 +17,12 @@
 			> img
 				width: 16px
 				height: 16px
-				margin-right: 8px
+				margin-right: 6px
 			> span
 				color: $text-300
 				+font-size(xs)
-
+				&:not(:last-child)
+					margin-right: 8px
 
 
 /* ==========================================================================
@@ -32,3 +35,113 @@
 		.collections
 			margin-top: 8px
 			color: $text-300
+
+
+/* ==========================================================================
+	 Product card
+	 ========================================================================== */
+.card-product
+	height: auto
+	.card-shadow
+		position: absolute
+		top: 0
+		left: 0
+		bottom: 0
+		z-index: -1
+		width: 100%
+		margin: -16px
+		box-shadow: $box-shadow-2
+		background-color: $white
+		visibility: hidden
+		opacity: 0
+		transition: $trs
+	&:hover
+		z-index: 2
+		.card-shadow,
+		.card-attributes > ul > li
+			visibility: visible
+			opacity: 1
+
+	.card-photo
+		height: 248px
+		img
+			width: 100%
+			height: 100%
+			object-fit: scale-down
+			object-position: left bottom
+			transform-origin: left bottom
+
+	.card-meta
+		.permalink
+			overflow: hidden
+			display: block
+			// height: 46px
+		.country
+			margin-top: 24px
+			> span
+				color: $text-200
+				font-size: 14px
+		.price
+			display: flex
+			flex-wrap: wrap
+			align-items: center
+			margin-top: 8px
+			> del
+				color: $text-400
+				~ ins
+					color: $orange
+					flex: 0 0 100%
+			> ins
+				color: $text-200
+				+font-size(lg)
+				text-decoration: none
+				> sup
+					color: $text-300
+					+font-size(xs)
+
+	.card-buttons
+		margin-top: 12px
+		margin-bottom: 12px
+
+	.card-attributes
+		position: relative
+		z-index: -1
+		> ul
+			> li
+				position: relative
+				z-index: 1
+				display: flex
+				+font-size(xs)
+				visibility: hidden
+				opacity: 0
+				transition: .3s ease
+				&:not(:last-child)
+					margin-bottom: 6px
+				&:nth-child(1),
+				&:nth-child(2),
+				&:nth-child(3)
+					visibility: visible
+					opacity: 1
+				.attr
+					padding-right: 4px
+					color: $text-400
+				.value
+					color: $text-300
+
+
+/* ==========================================================================
+	 Article card
+	 ========================================================================== */
+.card-article
+	.card-photo
+		height: 208px
+	.card-meta
+		.date
+			margin-bottom: 16px
+		.permalink
+			letter-spacing: 0.02em
+		.excerpt
+			margin-top: 8px
+			margin-bottom: 0
+
+
