--- a/app/sass/components/_tabs.sass
+++ b/app/sass/components/_tabs.sass
@@ -2,20 +2,24 @@
 	 Base customize for tabs
 	 ========================================================================== */
 .nav-tabs
-	margin-bottom: 8px
 	border-bottom: 0
+	&--centered
+		justify-content: center
+
 	.nav-link
-		margin-right: 32px
-		margin-bottom: 0
+		margin-top: 8px
+		margin-bottom: 8px
 		padding: 0 0 10px
 		border-radius: 0
 		border: 0
 		border-bottom: 1px solid $trsp
 		color: $text-200
+		+font-size(xs)
 		font-weight: $w-bold
 		letter-spacing: 0.1em
 		text-transform: uppercase
-		+font-size(xs)
+		&:not(:last-child)
+			margin-right: 32px
 		&:hover
 			color: $text-300
 			border-color: $text-400
