--- a/app/sass/components/_cards.sass
+++ b/app/sass/components/_cards.sass
@@ -77,7 +77,7 @@
 			display: block
 			// height: 46px
 		.country
-			margin-top: 24px
+			+mt(24)
 			> span
 				color: $text-200
 				font-size: 14px
