--- a/app/sass/components/_dropdowns.sass
+++ b/app/sass/components/_dropdowns.sass
@@ -34,7 +34,7 @@
 		position: relative
 		display: flex
 		&:not(:last-child)
-			margin-bottom: 24px
+			+mb(24)
 		.icon
 			flex: 0 0 auto
 			width: 24px
