--- a/app/sass/components/_popovers.sass
+++ b/app/sass/components/_popovers.sass
@@ -30,7 +30,7 @@
 	 ========================================================================== */
 .popover-brands
 	max-width: 870px
-	margin-top: 24px
+	+mt(24)
 	.popover-body
 		padding: 20px 12px
 		ul
