--- a/app/sass/pages/_home.sass
+++ b/app/sass/pages/_home.sass
@@ -17,7 +17,7 @@
 		width: 72px
 		height: 72px
 		margin-left: 32px
-		margin-bottom: 32px
+		+mb(32)
 		background-color: $bg
 		&::before
 			content: ''
