--- a/app/sass/common/_spacers.sass
+++ b/app/sass/common/_spacers.sass
@@ -1,18 +1,26 @@
 /* ==========================================================================
 	 Margins
 	 ========================================================================== */
+.mt-120
+	+mt(120)
+.mb-120
+	+mb(120)
 .mt-80
-	margin-top: 80px
+	+mt(80)
 .mb-80
-	margin-bottom: 80px
+	+mb(80)
 .mt-40
-	margin-top: 40px
+	+mt(40)
 .mb-40
-	margin-bottom: 40px
+	+mb(40)
 .mt-32
-	margin-top: 32px
+	+mt(32)
 .mb-32
-	margin-bottom: 32px
+	+mb(32)
+.mt-24
+	+mt(24)
+.mb-24
+	+mb(24)
 
 
 /* ==========================================================================
