--- a/app/sass/components/_forms.sass
+++ b/app/sass/components/_forms.sass
@@ -193,7 +193,7 @@ label
 	// Form group
 	&:not(.form-inline)
 		.form-group
-			margin-bottom: 24px
+			+mb(24)
 	&-group
 		.switch-input-mask
 			margin-bottom: 0
