--- a/app/sass/helpers/_mixins.sass
+++ b/app/sass/helpers/_mixins.sass
@@ -49,3 +49,47 @@
 		line-height: 16px
 		letter-spacing: 0.1em
 
+
+/* ==========================================================================
+	 Spacers mixin
+	 ========================================================================== */
+// Margin top
+@mixin mt($size)
+	@if $size == 120
+		margin-top: 120px
+
+	@else if $size == 80
+		margin-top: 80px
+
+	@else if $size == 40
+		margin-top: 40px
+
+	@else if $size == 32
+		margin-top: 32px
+
+	@else if $size == 24
+		margin-top: 24px
+
+	@else if $size == 16
+		margin-top: 16px
+
+// Margin bottom
+@mixin mb($size)
+	@if $size == 120
+		margin-bottom: 120px
+
+	@else if $size == 80
+		margin-bottom: 80px
+
+	@else if $size == 40
+		margin-bottom: 40px
+
+	@else if $size == 32
+		margin-bottom: 32px
+
+	@else if $size == 24
+		margin-bottom: 24px
+
+	@else if $size == 16
+		margin-bottom: 16px
+
