--- a/app/sass/helpers/_variables.sass
+++ b/app/sass/helpers/_variables.sass
@@ -6,6 +6,8 @@ $text-200:   #2A2B2E
 $white:      #FFF
 $border:     #EDF0F3
 $bg:         #FFF0EA
+$bg-hover:     darken($bg, 3%)
+$bg-focus:     darken($bg, 5%)
 $box-shadow:   0px 9px 26px rgba(176, 190, 197, 0.82), 0px 3px 6px rgba(176, 190, 197, 0.32)
 $box-shadow-2: 0px 9px 90px rgba(176, 190, 197, 0.22), 0px 3px 6px rgba(176, 190, 197, 0.32)
 $trsp:         transparent
