--- a/app/sass/modules/_article.sass
+++ b/app/sass/modules/_article.sass
@@ -6,35 +6,54 @@ article, .article
 	ul,
 	ol,
 	blockquote, table
-		margin-bottom: 24px
-		+media-breakpoint-down(md)
-			margin-bottom: 16px
+		+mb(32)
 
 	b,
 	strong
 		font-weight: $w-bold
 
-	p,
-	ul > li,
-	ul > li > a
-		+font-size(xs)
-		+media-breakpoint-down(sm)
-			font-size: 13px
-			line-height: 20px
-
 	a
-		color: blue
+		color: $orange
 		&:hover
-			text-decoration: underline
+			color: $text-200
 
 	ul
 		> li
-			position: relative
 			display: flex
-			padding-top: 8px
-			+media-breakpoint-down(xs)
-				padding-top: 0
 			&:not(:last-child)
-				margin-bottom: 8px
-				+media-breakpoint-down(xs)
-					margin-bottom: 16px
+				margin-bottom: 16px
+			&::before
+				content: ''
+				position: relative
+				top: -4px
+				flex: 0 0 auto
+				display: block
+				width: 32px
+				height: 32px
+				margin-right: 16px
+				background: $bg url('../images/icons/check-orange.svg') no-repeat center/14px
+
+	ol
+		counter-reset: ol-list
+		padding-left: 0
+		> li
+			list-style: none
+			display: flex
+			&:not(:last-child)
+				margin-bottom: 16px
+			&::before
+				content: counter(ol-list)
+				counter-increment: ol-list
+				position: relative
+				top: -4px
+				flex: 0 0 auto
+				display: flex
+				align-items: center
+				justify-content: center
+				width: 32px
+				height: 32px
+				margin-right: 16px
+				background-color: $bg
+				color: $orange
+				+font-size(xs)
+				font-weight: $w-bold
