--- a/app/sass/common/_spacers.sass
+++ b/app/sass/common/_spacers.sass
@@ -21,6 +21,14 @@
 	+mt(24)
 .mb-24
 	+mb(24)
+.mt-16
+	margin-top: 16px
+.mb-16
+	margin-bottom: 16px
+.mt-8
+	margin-top: 8px
+.mb-8
+	margin-bottom: 8px
 
 
 /* ==========================================================================
