--- a/app/sass/components/_buttons.sass
+++ b/app/sass/components/_buttons.sass
@@ -68,6 +68,39 @@
 
 
 /* ==========================================================================
+	 Burger button
+	 ========================================================================== */
+.btn.btn-burger
+	display: flex
+	flex-direction: column
+	align-items: center
+	justify-content: space-between
+	width: 28px
+	height: 15px
+	padding: 0
+	&:hover
+		> span
+			background-color: $orange
+	> span
+		display: block
+		width: 100%
+		height: 1px
+		will-change: transform
+		background-color: $text-200
+		transition: background-color .3s ease, transform .3s ease, opacity .15s ease
+	&._is-toggled
+		> span
+			transform-origin: 50%
+			&:nth-child(1)
+				transform: translateY(7px) rotate(45deg)
+			&:nth-child(2)
+				opacity: 0
+				transform: scale(0)
+			&:nth-child(3)
+				transform: translateY(-7px) rotate(-45deg)
+
+
+/* ==========================================================================
 	 Dropdown button
 	 ========================================================================== */
 .btn.btn-dropdown
