--- a/app/sass/modules/_header.sass
+++ b/app/sass/modules/_header.sass
@@ -215,8 +215,11 @@
 					will-change: transform
 					transform-origin: left
 					transform: scaleX(0)
-				&-input
+				.form-placeholder
 					flex: 1 1 auto
+					span
+						color: $text-400
+				&-input
 					height: 100%
 					padding-left: 0
 					padding-right: 14px
