--- a/app/sass/components/_buttons.sass
+++ b/app/sass/components/_buttons.sass
@@ -24,20 +24,31 @@
 	&:hover
 		color: inherit
 	&:disabled
-		background-color: #999
-		color: $text-200
+		cursor: not-allowed
+		opacity: 0.5
 
 
 /* ==========================================================================
 	Themes buttons
 	========================================================================== */
-.btn.btn-secondary
+.btn.btn-primary
 	background-color: $bg
 	color: $orange
 	&:hover
 		background-color: $bg-hover
 	&:focus
 		background-color: $bg-focus
+
+.btn.btn-secondary
+	height: 56px
+	background-color: $orange
+	color: $white
+	+font-size(xs)
+	text-transform: uppercase
+	&:hover
+		background-color: $text-200
+	&:active
+		background-color: $text-200
 
 
 /* ==========================================================================
