--- a/app/sass/components/_forms.sass
+++ b/app/sass/components/_forms.sass
@@ -37,26 +37,22 @@ label
 		appearance: none
 		display: block
 		width: 100%
+		padding: 0
 		border-radius: 0
-		border: 1px solid $border
+		border: 0
+		border-bottom: 1px solid $text-200
 		background-color: $white
 		background-clip: padding-box
 		color: $text-200
 		font-size: 15px
 		font-weight: $w-regular
 		line-height: 1.5
-		transition: border-color .2s ease-in-out, box-shadow .2s ease-in-out, background-color .3s ease-in-out
-		&:focus
-			outline: none
-			border-color: $trsp
-			box-shadow: 0 0 0 2px $border
+		transition: border-color .3s
 
 	// Input
 	&-control,
 	&-select
-		height: 64px
-		padding-left: 16px
-		padding-right: 16px
+		height: 56px
 		&--number
 			-moz-appearance: textfield
 			&::-webkit-outer-spin-button,
@@ -84,12 +80,12 @@ label
 		&-label
 			user-select: none
 			position: relative
+			display: block
 			width: 100%
 			margin-bottom: 0
-			padding-left: 32px
+			padding-top: 2px
+			padding-left: 44px
 			color: $text-200
-			font-size: 15px
-			line-height: 20px
 			&::before,
 			&::after
 				content: ''
@@ -97,20 +93,18 @@ label
 				position: absolute
 				top: 0
 				left: 0
-				width: 20px
-				height: 20px
-				border-radius: 2px
+				width: 32px
+				height: 32px
 				border: 1px solid $border
 				background-color: $white
-				transition: border .3s ease, opacity .15s ease
+				transition: border-color .3s ease, background-color .3s ease, opacity .15s ease
 			&::after
-				border-color: $border
-				background: $text-200 url('../images/icons/checked-white.svg') no-repeat center/10px
+				border-color: $bg
+				background: $bg url('../images/icons/check-orange.svg') no-repeat center/22px
 				opacity: 0
 			&:hover
-				&::before,
-				&::after
-					border-color: $text-200
+				&::before
+					background-color: $border
 		input:checked + label::after
 			opacity: 1
 
@@ -190,54 +184,70 @@ label
 			color: $text-200
 			box-shadow: 0 0 0 2px #7BE693
 
+	// Error notice
+	&-error-notice
+		display: none
+		margin-top: 4px
+		color: red
+		+font-size(xs)
+		&._is-shown
+			display: block
+
 	// Form group
-	&:not(.form-inline)
-		.form-group
-			+mb(24)
 	&-group
+		&:not(:first-child)
+			margin-top: 16px
 		.switch-input-mask
+			margin-top: 16px
 			margin-bottom: 0
-			margin-top: 10px
 			.form-checkbox-label
-				display: block
-				min-height: auto
 				padding-top: 0
-				padding-left: 25px
-				color: $text-200
-				+font-size(xxs)
+				padding-left: 24px
+				color: $text-300
+				+font-size(xs)
 				&::before,
 				&::after
 					width: 16px
 					height: 16px
-					border-radius: 2px
+					border: 0
+					background-size: 100%
+				&::before
+					background-color: $border
 				&::after
-					background: url('../images/icons/checked.svg') no-repeat center/10px
+					background-color: $bg
+				&:hover::before
+					background-color: $bg
 
-	// Form group label
-	&-group-label
+	// Form label + placeholder
+	&-placeholder
 		position: relative
+		height: 100%
 		input::placeholder
 			opacity: 0
 		input:not(:placeholder-shown)
-			padding-top: 40px
-			& ~ label
-				padding-top: 8px
-				padding-bottom: 8px
-				font-size: 12px
-		input, label
-			height: 64px
-			padding: 20px
+			padding-top: 10px
+			border-bottom-color: $orange
+			~ span
+				top: 0
+				color: $text-400
+				font-size: 13px
+				transform: none
 		label
+			display: flex
+			align-items: center
+			height: 100%
+			margin-bottom: 0
+		span
 			cursor: text
 			pointer-events: none
 			position: absolute
-			top: 0
+			top: 50%
 			left: 0
 			display: block
 			width: 100%
-			margin-bottom: 0
-			border: 1px solid $trsp
 			color: $text-200
 			font-size: 15px
-			line-height: 1.5
-			transition: all .1s ease-in-out
+			line-height: 1
+			transform: translateY(-50%)
+			transition: .1s ease-in-out
+
