Fixed clone header CSS

--- a/app/sass/modules/_header.sass
+++ b/app/sass/modules/_header.sass
@@ -8,7 +8,6 @@
 		left: 0
 		right: 0
 		z-index: 100
-		box-shadow: 0px 100px 80px rgba(77, 77, 77, 0.07), 0px 30px 24px rgba(77, 77, 77, 0.035), 0px 12px 10px rgba(77, 77, 77, 0.022), 0px 5px 4px rgba(77, 77, 77, 0.015)
 		visibility: hidden
 		opacity: 0
 		transform: translateY(-100%)
@@ -19,10 +18,13 @@
 		.header-middle
 			padding-top: 12px
 			padding-bottom: 12px
+			box-shadow: $box-shadow-2
+			background-color: $white
 			.burger
 				display: block
 				&-megamenu
-					display: block
+					+media-breakpoint-up(xxl)
+						display: block
 			.stores
 				margin-left: 28px
 			.search
@@ -36,6 +38,7 @@
 			display: none
 			padding-top: 6px
 			padding-bottom: 18px
+			background-color: $white
 			&._is-opened
 				display: block
 	&.header--stick
@@ -446,6 +449,9 @@
 	&-bottom
 		padding-top: 32px
 		padding-bottom: 24px
+		+media-breakpoint-down(xl)
+			display: none
+
 
 		// Navigation customize
 		.navigation
@@ -537,8 +543,8 @@
 			pointer-events: none
 			position: absolute
 			top: 100%
-			left: -100%
-			right: -100%
+			left: -20px
+			right: -20px
 			z-index: 101
 			padding-bottom: 32px
 			background-color: $white
