--- a/app/sass/modules/_footer.sass
+++ b/app/sass/modules/_footer.sass
@@ -53,8 +53,6 @@
 
 	// Contacts
 	&-contacts
-		+media-breakpoint-up(lg)
-			padding-left: 24px
 
 		.phone
 			+mb(24)
@@ -93,6 +91,7 @@
 				color: $text-300
 			// Callback button
 			&-callback
+				display: flex
 				height: auto
 				padding-left: 0
 				padding-right: 0
