--- a/app/sass/pages/_home.sass
+++ b/app/sass/pages/_home.sass
@@ -1,15 +1,32 @@
 // Section: Heroes banner
 .h-heroes
+	&-wrapper
+		+media-breakpoint-down(md)
+			max-width: 100%
+			padding-left: 0
+			padding-right: 0
 	&-photo
 		width: 100%
 		height: 400px
+		+media-breakpoint-down(md)
+			height: 280px
 
 
 // Section: Advantages
 .h-advantages
+	&-list
+		+media-breakpoint-down(md)
+			overflow-x: auto
+			margin-left: 0
+			margin-right: 0
 	&-item
 		display: flex
+		+media-breakpoint-down(md)
+			padding-right: 16px
+			margin-left: -8px
+			margin-right: -8px
 	&-icon
+		flex: 0 0 auto
 		position: relative
 		display: flex
 		align-items: center
@@ -17,7 +34,7 @@
 		width: 72px
 		height: 72px
 		margin-left: 32px
-		+mb(32)
+		margin-bottom: 32px
 		background-color: $bg
 		&::before
 			content: ''
@@ -44,6 +61,11 @@
 		position: relative
 		height: 312px
 		background-color: $bg
+		+media-breakpoint-down(md)
+			height: 200px
+		&--more
+			+media-breakpoint-down(md)
+				height: auto
 	&-link
 		position: absolute
 		top: 0
@@ -74,10 +96,14 @@
 				color: $text-200
 		.picture
 			max-height: 145px
+			margin-bottom: 16px
 			svg
 				fill: $bg
 				stroke: $orange
 				transition: $trs
+				+media-breakpoint-down(md)
+					width: 47px
+					height: 76px
 		.text
 			display: flex
 			flex-direction: column
@@ -95,14 +121,66 @@
 .h-about
 	&-title
 		max-width: 792px
-		margin-bottom: 60px
+	&-tabs
+		position: relative
+		+media-breakpoint-down(md)
+			&::after
+				content: ''
+				pointer-events: none
+				position: absolute
+				top: 0
+				right: 0
+				z-index: 1
+				width: 60px
+				height: 100%
+				background: linear-gradient(to right, rgba($white, 0) 0%, rgba($white, 1) 100%)
+			.nav-tabs
+				overflow-x: auto
+				flex-wrap: nowrap
+				white-space: nowrap
+				padding-right: 30px
+				> a:last-child
+					position: relative
+					z-index: 2
 	&-text
 		padding-right: 16px
 
 
+// Section: Popular product
+.h-products
+	&-tabs
+		position: relative
+		+media-breakpoint-down(md)
+			&::after
+				content: ''
+				pointer-events: none
+				position: absolute
+				top: 0
+				right: 0
+				z-index: 1
+				width: 60px
+				height: 100%
+				background: linear-gradient(to right, rgba($white, 0) 0%, rgba($white, 1) 100%)
+			.nav-tabs
+				overflow-x: auto
+				flex-wrap: nowrap
+				justify-content: flex-start
+				white-space: nowrap
+				padding-right: 30px
+				> a:last-child
+					position: relative
+					z-index: 2
+
+
 // Section: Stores contacts
 .h-stores
+	&-list
+		+media-breakpoint-down(md)
+			overflow-x: auto
+			padding-bottom: 16px
 	&-item
+		+media-breakpoint-down(md)
+			width: 256px
 		.number
 			display: flex
 			align-items: center
@@ -131,5 +209,13 @@
 				&:hover
 					color: $text-200
 
+
+// Section: Articles & News
+.h-articles
+	&-list
+		+media-breakpoint-down(md)
+			overflow-x: auto
+			.card-article
+				width: 256px
 
 
